themes/claro/Toolbar.css
/** Toolbar **/

.claro .dijitToolbar {
	border-bottom: 1px solid #b5bcc7;
	background-color: #f1f1f1;
	background-image: url("images/commonHighlight.png");
	background-position:0px 0px;
	background-repeat:repeat-x;
	padding: 2px 0px 2px 4px;
	zoom: 1;
	font-size: medium;
}

.claro .dijitToolbar label {
	padding: 0px 3px 0 6px;
}

/** override claro/form/Button.css **/
.claro .dijitToolbar .dijitButtonNode {
	border: 1px solid transparent;
	padding: 1px;
	background-image: url("images/commonHighlight.png");
	background-position:0px 0px;
	background-repeat:repeat-x;
	background-color: rgba(171,214,255,0);
	border-color: rgba(118,151,192,0);
	border-radius: 2px;	
	-moz-border-radius: 2px;	
	-webkit-border-radius: 2px;	
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	-webkit-transition-property:background-color, border;
	-webkit-transition-duration:.3s, .35s;
}

.claro .dijitToolbar .dijitComboBox .dijitButtonNode {
	padding: 0px;
}

/* hover status */
.claro .dijitToolbar .dijitButtonHover .dijitButtonNode,
.claro .dijitToolbar .dijitDropDownButtonHover .dijitButtonNode,
.claro .dijitToolbar .dijitComboButton .dijitButtonNodeHover,
.claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonHover,
.claro .dijitToolbar .dijitToggleButtonHover .dijitButtonNode {
	border-color: #769dc0;
	background-color: #abd6ff;
	-webkit-transition-duration:.2s, .25s;
}

/* actve status */
.claro .dijitToolbar .dijitButtonActive .dijitButtonNode,
.claro .dijitToolbar .dijitDropDownButtonActive .dijitButtonNode,
.claro .dijitToolbar .dijitComboButton .dijitButtonNodeActive,
.claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonActive,
.claro .dijitToolbar .dijitToggleButtonActive .dijitButtonNode {
	border-color: #769dc0;
	background-color:#7dbefa;
	background-position:0px -177px;
	-webkit-transition-duration:.1s;
}

/* toggle button checked status */
.claro .dijitToolbar .dijitToggleButtonChecked .dijitButtonNode {
	border-color: #769dc0;
	background-color:#fff;
}


/** hacks for browsers **/
.dj_ie6 .claro .dijitToolbar .dijitButtonContents, 
.dj_ie7 .claro .dijitToolbar .dijitButtonContents {
	margin: -2px 0;
	padding: 0;
}

.dj_ie6 .claro .dijitToolbar {
	background-image: none;
}

.dj_ie6 .claro .dijitToolbar .dijitButtonNode {
	margin: 1px; /* as transparent the border */
	border: none;
}

.dj_ie6 .claro .dijitToolbar .dijitButtonHover .dijitButtonNode,
.dj_ie6 .claro .dijitToolbar .dijitDropDownButtonHover .dijitButtonNode,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitButtonNodeHover,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonHover,
.dj_ie6 .claro .dijitToolbar .dijitToggleButtonHover .dijitButtonNode,
.dj_ie6 .claro .dijitToolbar .dijitButtonActive .dijitButtonNode,
.dj_ie6 .claro .dijitToolbar .dijitDropDownButtonActive .dijitButtonNode,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitButtonNodeActive,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonActive,
.dj_ie6 .claro .dijitToolbar .dijitToggleButtonActive .dijitButtonNode,
.claro .dijitToolbar .dijitToggleButtonChecked .dijitButtonNode {
	margin: 0;	/* remove margin and add a border */
	border-width: 1px;
	border-style: solid;
	background-image: none;
}

.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitButtonNodeHover,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonHover,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitButtonNodeActive,
.dj_ie6 .claro .dijitToolbar .dijitComboButton .dijitDownArrowButtonActive {
	padding: 1px;	/* ComboButton use table td has no margin, so we minus padding 2px -> 1px for the 1px border. ie6... */
}

/* Toolbar inside of disabled Editor */
.claro .dijitDisabled .dijitToolbar {
	background:none;
	background-color:#f5f5f5;
	border-bottom: 1px solid #d3d3d3;
}

